[gd_scene load_steps=18 format=3 uid="uid://dcby2n1y5764a"]

[ext_resource type="Script" path="res://Scenes/raft.gd" id="1_146m3"]
[ext_resource type="Texture2D" uid="uid://siquadniyjmi" path="res://Sprites/Floor_Walls - Copy.png" id="2_22d8l"]
[ext_resource type="Texture2D" uid="uid://cyuqhrekxbvbi" path="res://Sprites/Premium_Tilemap - Copy.png" id="3_ct0yb"]
[ext_resource type="Script" path="res://Scenes/Variables.gd" id="4_6bi58"]
[ext_resource type="PackedScene" uid="uid://cosc5wija0rts" path="res://Scenes/Crossbow.tscn" id="4_lh0jl"]
[ext_resource type="AudioStream" uid="uid://e48oxgcaiuo" path="res://Sound Effects/Building Noise.mp3" id="5_4chnm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aunuo"]
size = Vector2(30, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2gxy"]
size = Vector2(94, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjafj"]
size = Vector2(94, 93)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aavu8"]
texture = ExtResource("2_22d8l")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5xcga"]
texture = ExtResource("3_ct0yb")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
14:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
13:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
13:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0

[sub_resource type="TileSet" id="TileSet_as51i"]
sources/0 = SubResource("TileSetAtlasSource_aavu8")
sources/1 = SubResource("TileSetAtlasSource_5xcga")

[sub_resource type="CircleShape2D" id="CircleShape2D_hic34"]
radius = 73.3348

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87l36"]
bg_color = Color(0.314316, 0.314316, 0.314316, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46hf3"]
bg_color = Color(2.11775e-06, 0.728058, 0.986574, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs8fd"]
bg_color = Color(0.74902, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vecmu"]
bg_color = Color(0, 1, 0.184314, 1)

[node name="Raft" type="CharacterBody2D" groups=["Raft"]]
script = ExtResource("1_146m3")

[node name="StarterRaft" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_aunuo")

[node name="Upgrade1" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_t2gxy")
disabled = true

[node name="Upgrade2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 31.5)
shape = SubResource("RectangleShape2D_mjafj")
disabled = true

[node name="StarterRaftTile" type="TileMap" parent="."]
tile_set = SubResource("TileSet_as51i")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 196608, 0, 65535, 196608, 1, 131071, 196608, 2, -65536, 262144, 0, 0, 262144, 1, 65536, 262144, 2)
layer_1/name = "Layer1"
layer_1/y_sort_enabled = true
layer_1/z_index = 1

[node name="Upgrade1Tile" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_as51i")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 196608, 0, 65535, 196608, 1, 131071, 196608, 2, -65536, 262144, 0, 0, 262144, 1, 65536, 262144, 2, -65535, 196608, 0, 1, 196608, 1, 65537, 196608, 2, -65534, 262144, 0, 2, 262144, 1, 65538, 262144, 2, -3, 196608, 0, 65533, 196608, 1, 131069, 196608, 2, -2, 262144, 0, 65534, 262144, 1, 131070, 262144, 2)
layer_1/name = "Layer1"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-65534, 655361, 16, 2, 655361, 17, -3, 131073, 10, -1, 65537, 10)

[node name="Node2D" parent="Upgrade1Tile" instance=ExtResource("4_lh0jl")]
position = Vector2(0, 23)

[node name="Upgrade2Tile" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_as51i")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 196608, 0, 65535, 196608, 1, 131071, 196608, 2, -65536, 262144, 0, 0, 262144, 1, 65536, 262144, 2, -65535, 196608, 0, 1, 196608, 1, 65537, 196608, 2, -65534, 262144, 0, 2, 262144, 1, 65538, 262144, 2, -3, 196608, 0, 65533, 196608, 1, 131069, 196608, 2, -2, 262144, 0, 65534, 262144, 1, 131070, 262144, 2, 196605, 196608, 0, 262141, 196608, 1, 327677, 196608, 2, 196606, 262144, 0, 262142, 262144, 1, 327678, 262144, 2, 196607, 196608, 0, 262143, 196608, 1, 327679, 196608, 2, 131072, 262144, 0, 196608, 262144, 1, 262144, 262144, 2, 131073, 196608, 0, 196609, 196608, 1, 262145, 196608, 2, 131074, 262144, 0, 196610, 262144, 1, 262146, 262144, 2)
layer_1/name = "Layer1"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-65534, 655361, 16, 2, 655361, 17, 262143, 589825, 16, 262146, 655361, 20, 196607, 589825, 15, 196609, 327681, 10, 262144, 196609, 10, -3, 131073, 10, -1, 65537, 10, 262141, 1, 19, 327677, 1, 20, 262142, 65537, 19, 327678, 65537, 20)

[node name="Crossbow" parent="Upgrade2Tile" instance=ExtResource("4_lh0jl")]
position = Vector2(0, 40)

[node name="Crossbow2" parent="Upgrade2Tile" instance=ExtResource("4_lh0jl")]
position = Vector2(0, 23)

[node name="Pickup Zone" type="Area2D" parent="." groups=["Player"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup Zone" groups=["Raft"]]
position = Vector2(0, 33)
shape = SubResource("CircleShape2D_hic34")

[node name="Variables" type="CanvasLayer" parent="." node_paths=PackedStringArray("level_up_notice")]
process_mode = 3
script = ExtResource("4_6bi58")
level_up_notice = NodePath("Control/LevelUpNotice")

[node name="Control" type="Control" parent="Variables"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Experience" type="ProgressBar" parent="Variables/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 905.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_87l36")
theme_override_styles/fill = SubResource("StyleBoxFlat_46hf3")

[node name="Health" type="ProgressBar" parent="Variables/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 905.0
offset_top = -55.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_cs8fd")
theme_override_styles/fill = SubResource("StyleBoxFlat_vecmu")
value = 100.0

[node name="LevelUpNotice" type="PanelContainer" parent="Variables/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Variables/Control/LevelUpNotice"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Variables/Control/LevelUpNotice/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="btn_health_level" type="Button" parent="Variables/Control/LevelUpNotice/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Up Health"

[node name="btn_knife_level" type="Button" parent="Variables/Control/LevelUpNotice/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Up Arrow"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4chnm")

[connection signal="area_entered" from="Pickup Zone" to="." method="_on_pickup_zone_area_entered"]
[connection signal="visibility_changed" from="Variables/Control/LevelUpNotice" to="Variables" method="_on_level_up_notice_visibility_changed"]
[connection signal="pressed" from="Variables/Control/LevelUpNotice/MarginContainer/VBoxContainer/btn_health_level" to="Variables" method="_on_btn_health_level_pressed"]
[connection signal="pressed" from="Variables/Control/LevelUpNotice/MarginContainer/VBoxContainer/btn_knife_level" to="Variables" method="_on_btn_knife_level_pressed"]
